# rustapi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER_TROUBLESHOOTING.md  README.md
migrations/: 20240101000001_create_tasks.sql
src/: config.rs  database.rs  errors.rs  main.rs
src/api/: dto.rs  handlers.rs  mod.rs  task_handlers.rs
src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  request_id.rs
src/models/: mod.rs
src/routes/: mod.rs
src/utils/: hash.rs  mod.rs  validation.rs
